Add icons, Reset previous data on submit

--- a/src/camp-project-console/index.html
+++ b/src/camp-project-console/index.html
@@ -38,21 +38,21 @@
         </div>
         <!-- Team A atk add. -->
         <div class="form-group row">
-          <label class="col-2 col-form-label">(<span data-bind="text: TeamA.team"></span>)+atk</label>
+          <label class="col-2 col-form-label">(<span data-bind="text: TeamA.team"></span>)+atk[O]</label>
           <div class="col-10">
             <input class="form-control" type="number" data-bind="value: TeamA.atk">
           </div>
         </div>
         <!-- Team A def add. -->
         <div class="form-group row">
-          <label class="col-2 col-form-label">(<span data-bind="text: TeamA.team"></span>)+def</label>
+          <label class="col-2 col-form-label">(<span data-bind="text: TeamA.team"></span>)+def[T]</label>
           <div class="col-10">
             <input class="form-control" type="number" data-bind="value: TeamA.def">
           </div>
         </div>
         <!-- Team A sp add. -->
         <div class="form-group row">
-          <label class="col-2 col-form-label">(<span data-bind="text: TeamA.team"></span>)+sp</label>
+          <label class="col-2 col-form-label">(<span data-bind="text: TeamA.team"></span>)+sp[X]</label>
           <div class="col-10">
             <input class="form-control" type="number" data-bind="value: TeamA.sp">
           </div>
@@ -86,21 +86,21 @@
         </div>
         <!-- Team B atk add. -->
         <div class="form-group row">
-          <label class="col-2 col-form-label">(<span data-bind="text: TeamB.team"></span>)+atk</label>
+          <label class="col-2 col-form-label">(<span data-bind="text: TeamB.team"></span>)+atk[O]</label>
           <div class="col-10">
             <input class="form-control" type="number" data-bind="value: TeamB.atk">
           </div>
         </div>
         <!-- Team B def add. -->
         <div class="form-group row">
-          <label class="col-2 col-form-label">(<span data-bind="text: TeamB.team"></span>)+def</label>
+          <label class="col-2 col-form-label">(<span data-bind="text: TeamB.team"></span>)+def[T]</label>
           <div class="col-10">
             <input class="form-control" type="number" data-bind="value: TeamB.def">
           </div>
         </div>
         <!-- Team B sp add. -->
         <div class="form-group row">
-          <label class="col-2 col-form-label">(<span data-bind="text: TeamB.team"></span>)+sp</label>
+          <label class="col-2 col-form-label">(<span data-bind="text: TeamB.team"></span>)+sp[X]</label>
           <div class="col-10">
             <input class="form-control" type="number" data-bind="value: TeamB.sp">
           </div>
@@ -112,16 +112,16 @@
       <div class="col-sm">
         <span>Team <span data-bind="text: TeamA.team"/></span>
         <span>+$ <span data-bind="text: TeamA.money"/></span>
-        <span>+atk <span data-bind="text: TeamA.atk"/></span>
-        <span>+def <span data-bind="text: TeamA.def"/></span>
-        <span>+sp <span data-bind="text: TeamA.sp"/></span>
+        <span>+atk[O] <span data-bind="text: TeamA.atk"/></span>
+        <span>+def[T] <span data-bind="text: TeamA.def"/></span>
+        <span>+sp[X] <span data-bind="text: TeamA.sp"/></span>
       </div>
       <div class="col-sm">
         <span>Team <span data-bind="text: TeamB.team"/></span>
         <span>+$ <span data-bind="text: TeamB.money"/></span>
-        <span>+atk <span data-bind="text: TeamB.atk"/></span>
-        <span>+def <span data-bind="text: TeamB.def"/></span>
-        <span>+sp <span data-bind="text: TeamB.sp"/></span>
+        <span>+atk[O] <span data-bind="text: TeamB.atk"/></span>
+        <span>+def[T] <span data-bind="text: TeamB.def"/></span>
+        <span>+sp[X] <span data-bind="text: TeamB.sp"/></span>
       </div>
     </div>
     <div class="row">
